@@ -204,7 +204,6 @@ void   testprimes(GEN bnf, GEN bound);
 GEN    to_Fp_simple(GEN nf, GEN x, GEN ffproj);
 GEN    to_Fq_simple(GEN nf, GEN x, GEN pr);
 GEN    unif_mod_fZ(GEN pr, GEN F);
-GEN    unnf_minus_x(GEN x);
 GEN    ideallog_sgn(GEN nf, GEN x, GEN sgn, GEN bid);
 GEN    zlog_units(GEN nf, GEN U, GEN sgnU, GEN bid);
 GEN    zlog_units_noarch(GEN nf, GEN U, GEN bid);
