@@ -469,6 +469,7 @@ BA 177- libpari support for low-res plot()
    181- ellan(E, n) for E/K number field
    182- [libpari] function gisexactzero
 BA 183- GP function ellsea
+   183- [libpari] nfsub, Rg_RgC_sub, Rg_RgC_sub, Z_ZC_sub
 
   Changed
     1- make log(+/-I) return (+/-)Pi/2*I with gen_0 real part [#1556]
